--- a/styles.css
+++ b/styles.css
@@ -42,3 +42,15 @@ h1 {
 #sausage:hover {
     filter: brightness(1.2);
 }
+/* Делаем сайт статичным */
+html, body {
+    width: 100%;
+    height: 100%;
+    overflow: hidden; /* Убираем прокрутку */
+    touch-action: none; /* Блокируем жесты зума */
+}
+
+/* Запрещаем двойное нажатие для увеличения */
+body {
+    touch-action: manipulation;
+}
